<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vol_log_bg"
    tools:context=".Event_View_Org">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/org_photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/photo"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/market_saturday"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/event_name"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/event_date"
                android:fontFamily="@font/bebas_neue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/event_time"
                android:fontFamily="@font/bebas_neue"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quota: "
                    android:fontFamily="@font/bebas_neue"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="1dp"/>

                <TextView
                    android:id="@+id/txtQuota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/event_quota"
                    android:fontFamily="@font/bebas_neue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Venue: "
                    android:fontFamily="@font/bebas_neue"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="1dp"/>

                <TextView
                    android:id="@+id/txtVenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/event_venue"
                    android:fontFamily="@font/bebas_neue"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/description"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signupList"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_default"
                android:textColor="@color/colorThree"
                android:padding="20dp"
                android:text="@string/view_sign_ups_list" />

            <Button
                android:id="@+id/changeEventStatus"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_default"
                android:textColor="@color/colorThree"
                android:padding="20dp"
                android:text="Change Event Status" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <!-- QR Scanner -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/qr_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_qr"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

</android.support.constraint.ConstraintLayout>