<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_id"
    android:clickable="true"

    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    cardview:cardCornerRadius="15dp"
    android:focusable="true">
    <!--android:foreground="?android:attr/selectableItemBackground"-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/org_logo_id"
            android:layout_width="92dp"
            android:layout_height="99dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/organisation_logo"
            android:scaleType="fitCenter"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.0"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="0.428" />

        <TextView
            android:id="@+id/event_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/market_saturday"
            android:text="@string/event_name"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30sp"
            android:textStyle="bold"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.647"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/event_date_id"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/event_date"
            android:textColor="@color/cardview_dark_background"
            android:textSize="13sp"
            cardview:layout_constraintBaseline_toBaselineOf="@+id/date_id"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.451"
            cardview:layout_constraintStart_toEndOf="@+id/date_id" />

        <TextView
            android:id="@+id/event_time_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/event_time"
            android:textColor="@color/cardview_dark_background"
            android:textSize="13sp"
            cardview:layout_constraintBaseline_toBaselineOf="@+id/time_id"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.448"
            cardview:layout_constraintStart_toEndOf="@+id/time_id" />

        <TextView
            android:id="@+id/event_quota_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_quota"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.501"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/event_organiser_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/organisation_name"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="1.0"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/date_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Date:"
            android:textSize="13sp"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.445"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/quota_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Quota: "
            android:textSize="12sp"
            cardview:layout_constraintBaseline_toBaselineOf="@+id/event_quota_id"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.342"
            cardview:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/time_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Time:"
            android:textSize="13sp"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.452"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:layout_constraintVertical_bias="0.64" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>